# v0.3.0 (SNAPSHOT)
- Fix error 'git: Argument list too long' when the autogenerated commit message
  gets longer
- Don't invoke `git merge` while formatting help
- Code cleanup

# v0.2.1 (2017-01-06)
- Include only history of subproject files selected by a given filter in the
  auto-generated commit message
- Improve performance of subproject merges for for source branches with lots of
  files, but restrictive filters
- Include filter expression in auto-generated commit messages

# v0.2.0 (2017-01-05)
- Add a 'filter' argument to select only subproject files for merging, that
  match a given file name/path pattern (the 'filter').

# v0.1.4 (2016-12-29)
- Fix git warning 'fatal: Not a valid object name 0' when initializing a
  subproject. Note: the warning did not affect initialization of the subproject!

# v0.1.3 (2016-12-26)
- Git-subproject no longer invokes `git merge --squash -s subtree2`, but uses
  the same shared merge implementation as the subtree2 merge strategy (this is
  an internal code change, that might improve performance, but does not affect
  externally visible behavior).

# v0.1.2 (2016-12-18)
- Accept qualified (remote) branch names (that is 'remotes/origin/branch'
  instead of 'origin/branch').
- v0.1.1 introduced a bug, that resulted in push-merges not being considered
  when calculating the merge base (more precise: they have been considered only
  if "my-prefix" was equal to "their-prefix"). This issue is now resolved.
- When parsing their branch's history, the order of the marker arguments is not
  relevant any more. This might improve forward compatibility.

# v0.1.1 (2016-12-07)
- Multiple subprojects sharing the same combination of source/target-branch are
  now distinguished properly. Previously subprojects were mixed when push
  operations were involved.
  
# v0.1.0 (2016-11-29)
- Initial version