@@ -1,4 +1,7 @@
 # v0.3.0 (SNAPSHOT)
+- Add subprojects based on "foreign" branches, that is a source branch located
+  in a different repository. Such "foreign" branches are fetched and pushed
+  automatically.
 - Fix error 'git: Argument list too long' when the autogenerated commit message
   gets longer
 - Don't invoke `git merge` while formatting help
